# Qt-Crazy-Arcade

./: Background.cpp  Background.h  Block.cpp  Block.h  Bomb.cpp  Bomb.h  CMakeLists.txt  DestructibleBlock.cpp  DestructibleBlock.h  EmptyBlock.cpp  EmptyBlock.h  Flame.cpp  Flame.h  Game.cpp  Game.h  GameIsOver.cpp  GameIsOver.h  GameIsWin.cpp  GameIsWin.h  Health.cpp  Health.h  IndestructibleBlock.cpp  IndestructibleBlock.h  Level.h  Map.cpp  Map.h  MapCell.cpp  MapCell.h  Player.cpp  Player.h  README.md  constants.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  prop.cpp  prop.h  resourses.qrc  widget.h
sound_effects/: bgm2.xm
